Day 11 - Network Policies/b.1 podLevelNetworkPolicies.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: triumph1

  policyTypes:
  - Ingress 

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: triumph1
  policyTypes:
  - Egress
